# lovett

./: .buildinfo  .gitignore  .travis.yml  Makefile  README  README.rst  TODO.md  about.html  dev-requirements.txt  example-usage.html  genindex.html  hacking.org  ideas.org  index.html  indexing.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  snippets.py  timings.txt
.doctrees/: about.doctree  environment.pickle  example-usage.doctree  index.doctree  indexing.doctree
.doctrees/api/: lovett.compat.doctree  lovett.corpus.doctree  lovett.db.doctree  lovett.doctree  lovett.ilovett.doctree  lovett.loader.doctree  lovett.query.doctree  lovett.transform.doctree  lovett.tree.doctree  lovett.util.doctree  modules.doctree
_modules/: _weakrefset.html  index.html
_modules/lovett/: compat.html  corpus.html  db.html  ilovett.html  loader.html  query.html  tree.html  (+2 more)
_sources/: about.txt  example-usage.txt  index.txt  indexing.txt
api/: lovett.compat.html  lovett.corpus.html  lovett.db.html  lovett.html  lovett.ilovett.html  lovett.loader.html  lovett.query.html  lovett.transform.html  lovett.tree.html  lovett.util.html  modules.html
cs-queries/: np-acc.q
doc/: conf.py
js/: HACKING.org  extension.js  index.js  lovett.json  package-lock.json  package.json  webpack.config.js  widget.js
lovett/: __init__.py  compat.py  corpus.py  db.py  debug.py  format.py  ilovett.py  loader.py  query.py  transform.py  transforms.py  tree.py  util.py  widgets.py
notebooks/: DB experiments.ipynb  Indexing performance test.ipynb  Widgets.ipynb
(+27 files in other folders)
