[metadata]
name = lovett
author = Aaron Ecay
author-email = aaronecay@gmail.com
summary = Turning corpora into Python
description-file = README.rst
home-page = https://test.com
license = GPL3
classifier =
        Programming Language :: Python
keywords =
    corpora
[files]
packages =
    lovett
data_files =
    share/jupyter/nbextensions/lovett =
        lovett/js/index.js
        lovett/js/extension.js
    etc/jupyter/nbconfig/notebook.d = lovett/js/lovett.json

[flake8]
ignore = E501
